--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import '~antd/dist/antd.css';
+
 .App {
   text-align: center;
 }
@@ -28,7 +29,20 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+.style1 {
+  background: #61dafb;
+}
+
+.style2 {
+  background: red;
+}
+
+.style3 {
+  background: green;
 }
