--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -30,6 +30,7 @@
     background-color: #fff;
     margin: 50px auto;
     padding: 20px 40px;
+    position: relative;
 }
 
 .login-content h2 {
@@ -38,6 +39,27 @@
     font-weight: bold;
     margin-bottom: 20px;
 }
- .login-form-button {
+
+.login-form-button {
     width: 100%;
-  }
+}
+
+.error-msg {
+    visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    text-align: center;
+    height: 30px;
+    width: 100%;
+    background: #f60c1a;
+    color: #ffffff;
+    font-size: 16px;
+    transform: translateY(-30px);
+    transition: all .3s;
+}
+
+.show {
+    visibility: visible;
+    transform: translateY(0);
+}
